<resources>
    <string name="app_name">MaterialDrawer</string>
    <string name="action_settings">Settings</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="nav_favorites">我的收藏</string>
    <string name="nav_following">关注的人</string>
    <string name="nav_histories">历史记录</string>
    <string name="nav_home">首页</string>
    <string name="nav_login_click_avatar">点击头像登录</string>
    <string name="nav_notifications">我的消息</string>
    <string name="nav_offline_manager">离线缓存</string>
    <string name="nav_growth_process">健身历程</string>
    <string name="nav_settings">设置与帮助</string>
    <string name="title_game">游戏中心</string>
    <string name="title_theme_store">主题选择</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
